Fix scrollbar not disabled in dark mode

--- a/css/new-design/browser.css
+++ b/css/new-design/browser.css
@@ -16,7 +16,7 @@
 
 /* Hide disabled scrollbar on the right side */
 body::-webkit-scrollbar {
-	width: 0;
+	display: none;
 }
 
 /* A utility class for temporarily hiding all dropdown menus */
